[gd_scene load_steps=4 format=2]

[ext_resource path="res://radiation_material.tres" type="Material" id=1]
[ext_resource path="res://radiation_graph.gd" type="Script" id=2]
[ext_resource path="res://graph_controls.gd" type="Script" id=3]

[node name="AntennaGraph" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OriginX" type="Line2D" parent="."]
visible = false
position = Vector2( 350, 189 )
points = PoolVector2Array( 0, 0, 100, 0 )

[node name="OriginY" type="Line2D" parent="."]
visible = false
position = Vector2( 350, 189 )
points = PoolVector2Array( 50, -50, 50, 50 )

[node name="GraphContainer" type="AspectRatioContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Graph" type="ColorRect" parent="GraphContainer"]
material = ExtResource( 1 )
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
script = ExtResource( 2 )

[node name="GraphControls" type="VBoxContainer" parent="."]
anchor_left = 0.796
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.104065
script = ExtResource( 3 )
graph_path = NodePath("../GraphContainer/Graph")

[node name="ResetButton" type="Button" parent="GraphControls"]
margin_right = 209.0
margin_bottom = 20.0
text = "Reset"

[node name="overlay_button" type="CheckBox" parent="GraphControls"]
margin_top = 24.0
margin_right = 209.0
margin_bottom = 48.0
text = "Overlay"

[node name="PauseButton" type="Button" parent="GraphControls"]
margin_top = 52.0
margin_right = 209.0
margin_bottom = 72.0
toggle_mode = true
text = "Paused"

[node name="ResetTimeButton" type="Button" parent="GraphControls"]
margin_top = 76.0
margin_right = 209.0
margin_bottom = 96.0
text = "Reset Time"

[node name="ASpaceLabel" type="Label" parent="GraphControls"]
margin_top = 100.0
margin_right = 209.0
margin_bottom = 114.0
text = "a spacing: "

[node name="ASpaceHBox" type="HBoxContainer" parent="GraphControls"]
margin_top = 118.0
margin_right = 209.0
margin_bottom = 138.0

[node name="ASpaceSlider" type="HSlider" parent="GraphControls/ASpaceHBox"]
margin_right = 185.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 720.0
step = 45.0
value = 45.0
tick_count = 5
ticks_on_borders = true

[node name="ASpaceToggle" type="Button" parent="GraphControls/ASpaceHBox"]
margin_left = 189.0
margin_right = 209.0
margin_bottom = 20.0
grow_horizontal = 0
size_flags_horizontal = 9
toggle_mode = true
pressed = true
text = "C"

[node name="Antenna1Enabled" type="CheckBox" parent="GraphControls"]
margin_top = 142.0
margin_right = 209.0
margin_bottom = 166.0
pressed = true
text = "Antenna1 Enabled"

[node name="Antenn1PhaseLabel" type="Label" parent="GraphControls"]
margin_top = 170.0
margin_right = 209.0
margin_bottom = 184.0
text = "Antenna1 phase:"

[node name="Antenna1PhaseSlider" type="HSlider" parent="GraphControls"]
margin_top = 188.0
margin_right = 209.0
margin_bottom = 204.0
min_value = -360.0
max_value = 360.0
step = 11.25
value = -1.0
tick_count = 5
ticks_on_borders = true

[node name="Antenna2Enabled" type="CheckBox" parent="GraphControls"]
margin_top = 208.0
margin_right = 209.0
margin_bottom = 232.0
pressed = true
text = "Antenna2 Enabled"

[node name="Antenn2PhaseLabel" type="Label" parent="GraphControls"]
margin_top = 236.0
margin_right = 209.0
margin_bottom = 250.0
text = "Antenna1 phase:"

[node name="Antenna2PhaseSlider" type="HSlider" parent="GraphControls"]
margin_top = 254.0
margin_right = 209.0
margin_bottom = 270.0
min_value = -360.0
max_value = 360.0
step = 11.25
value = -1.0
tick_count = 5
ticks_on_borders = true

[node name="Antenna3Enabled" type="CheckBox" parent="GraphControls"]
margin_top = 274.0
margin_right = 209.0
margin_bottom = 298.0
pressed = true
text = "Antenna3 Enabled"

[node name="Antenn3PhaseLabel" type="Label" parent="GraphControls"]
margin_top = 302.0
margin_right = 209.0
margin_bottom = 316.0
text = "Antenna1 phase:"

[node name="Antenna3PhaseSlider" type="HSlider" parent="GraphControls"]
margin_top = 320.0
margin_right = 209.0
margin_bottom = 336.0
min_value = -360.0
max_value = 360.0
step = 11.25
value = -1.0
tick_count = 5
ticks_on_borders = true

[node name="Antenna4Enabled" type="CheckBox" parent="GraphControls"]
margin_top = 340.0
margin_right = 209.0
margin_bottom = 364.0
pressed = true
text = "Antenna4 Enabled"

[node name="Antenn4PhaseLabel" type="Label" parent="GraphControls"]
margin_top = 368.0
margin_right = 209.0
margin_bottom = 382.0
text = "Antenna1 phase:"

[node name="Antenna4PhaseSlider" type="HSlider" parent="GraphControls"]
margin_top = 386.0
margin_right = 209.0
margin_bottom = 402.0
min_value = -360.0
max_value = 360.0
step = 11.25
value = -1.0
tick_count = 5
ticks_on_borders = true

[node name="SipButton" type="Button" parent="GraphControls"]
margin_top = 406.0
margin_right = 209.0
margin_bottom = 426.0
text = "SIP"

[node name="SopButton" type="Button" parent="GraphControls"]
margin_top = 430.0
margin_right = 209.0
margin_bottom = 450.0
text = "Sop"

[node name="VorButton" type="Button" parent="GraphControls"]
margin_top = 454.0
margin_right = 209.0
margin_bottom = 474.0
text = "VOR"

[connection signal="gui_input" from="GraphContainer/Graph" to="GraphContainer/Graph" method="_on_Graph_gui_input"]
[connection signal="pressed" from="GraphControls/ResetButton" to="GraphControls" method="_on_ResetButton_pressed"]
[connection signal="toggled" from="GraphControls/overlay_button" to="GraphContainer/Graph" method="_on_overlay_button_toggled"]
[connection signal="toggled" from="GraphControls/PauseButton" to="GraphControls" method="_on_PauseButton_toggled"]
[connection signal="pressed" from="GraphControls/ResetTimeButton" to="GraphControls" method="_on_ResetTimeButton_pressed"]
[connection signal="value_changed" from="GraphControls/ASpaceHBox/ASpaceSlider" to="GraphControls" method="_on_ASpaceSlider_value_changed"]
[connection signal="toggled" from="GraphControls/ASpaceHBox/ASpaceToggle" to="GraphControls" method="_on_ASpaceToggle_toggled"]
[connection signal="toggled" from="GraphControls/Antenna1Enabled" to="GraphControls" method="_on_Antenna1Enabled_toggled"]
[connection signal="value_changed" from="GraphControls/Antenna1PhaseSlider" to="GraphControls" method="_on_Antenna1PhaseSlider_value_changed"]
[connection signal="toggled" from="GraphControls/Antenna2Enabled" to="GraphControls" method="_on_Antenna2Enabled_toggled"]
[connection signal="value_changed" from="GraphControls/Antenna2PhaseSlider" to="GraphControls" method="_on_Antenna2PhaseSlider_value_changed"]
[connection signal="toggled" from="GraphControls/Antenna3Enabled" to="GraphControls" method="_on_Antenna3Enabled_toggled"]
[connection signal="value_changed" from="GraphControls/Antenna3PhaseSlider" to="GraphControls" method="_on_Antenna3PhaseSlider_value_changed"]
[connection signal="toggled" from="GraphControls/Antenna4Enabled" to="GraphControls" method="_on_Antenna4Enabled_toggled"]
[connection signal="value_changed" from="GraphControls/Antenna4PhaseSlider" to="GraphControls" method="_on_Antenna4PhaseSlider_value_changed"]
[connection signal="pressed" from="GraphControls/SipButton" to="GraphControls" method="_on_SipButton_pressed"]
[connection signal="pressed" from="GraphControls/SopButton" to="GraphControls" method="_on_SopButton_pressed"]
[connection signal="pressed" from="GraphControls/VorButton" to="GraphControls" method="_on_VorButton_pressed"]
